--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.111.0"
 uvicorn = "^0.29.0"
+httpie = "^3.2.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.1"
